# 2025-winter-swaipe-StuBE

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
src/: config.py  main.py
src/domain/studentCard/dto/: schemas.py
src/domain/studentCard/entity/: student.py  student_card.py
src/domain/studentCard/exception/: exceptions.py
src/domain/studentCard/repository/: repositories.py
src/domain/studentCard/service/: barcode_service.py  ocr_service.py
src/infrastructure/common/persistence/: database.py
src/infrastructure/studentCard/persistence/: database.py
src/interfaces/api/: routes.py
vector_db/: chroma.sqlite3
